<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickOperator"
                android:text="@string/button_Plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickOperator"
                android:text="@string/button_MINUS" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickOperator"
                android:text="@string/button_DIVIDE" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickOperator"
                android:text="@string/button_CLEAR" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/btnDEC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickNumber"
                android:text="@string/button_DECIMAL" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickOperator"
                android:text="@string/button_MULTIPLY" />
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickOperator"
            android:text="@string/button_EQUALS" />
    </LinearLayout>

</RelativeLayout>